--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^18.2.7",
     "@types/react-dom": "^18.2.4",
     "aos": "^3.0.0-beta.6",
+    "firebase": "^10.0.0",
     "next": "^13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
