--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.18",
+    "@tinymce/tinymce-react": "^4.3.0",
     "@types/node": "^20.2.5",
-    "@types/react": "^18.2.7",
+    "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.4",
     "aos": "^3.0.0-beta.6",
     "firebase": "^10.0.0",
+    "formik": "^2.4.2",
     "next": "^13.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "^5.0.4"
+    "react-icons": "^4.10.1",
+    "typescript": "^5.0.4",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
