--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.4",
     "aos": "^3.0.0-beta.6",
+    "encoding": "^0.1.13",
     "firebase": "^10.0.0",
     "formik": "^2.4.2",
     "next": "^13.4.4",
